fixed navbar so that it stretches across screen. also moved navigation drawer to the left, and updated work history page

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background: url(spacex.jpg) no-repeat center center fixed;
+  background: url(gradient-background.jpg) no-repeat center center fixed;
   -webkit-background: cover;
   -moz-background: cover;
   -o-background: cover;
